welcome.lessons.welcome.array.maxvalue.Extrema.scala.error
extrema:5: error: '(' expected but identifier found.
		{if nums(i)<min
                    ^extrema:7: error: '(' expected but identifier found.
		if nums(i)>max
                   ^