welcome.lessons.welcome.array.maxvalue.Extrema.scala.code
def extrema(nums:Array[Int]): Int = {
	var min = nums(0)
	var max = nums(0)
	for (i <- 1 to nums.length-1)
		{if nums(i)<min
			{min=nums(i)}
		if nums(i)>max
			{max=nums(i)}
		}
	return max-min
}